Correctly set create and update time via create/set methods
Follow Google's behaviour:
"This value is initially set to the createTime then increases monotonically with each change to the document.".
Dates are stored in the document, and not coming from DocumentSnapshot anymore.

https://cloud.google.com/firestore/docs/reference/rest/v1/projects.databases.documents